// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`DetectedVariables rendering tests DetectedVariables - detectedVariables - undefined - tests 1`] = `
<div>
  <section
    class="space-y-2"
    data-testid="detected-variables"
  >
    <p
      class="text-xs font-medium tracking-wide text-slate-400 uppercase"
    >
      Erkannte Platzhalter
    </p>
    <p
      class="text-sm text-slate-500"
    >
      Platzhalter, die im Prompt-Text gefunden wurden
    </p>
    <div
      class="rounded-lg border border-slate-200 bg-slate-50 p-4"
    >
      <div
        class="mb-3 flex items-center justify-between"
      >
        <div
          class="text-sm text-slate-700"
        >
          <span
            class="font-medium"
          >
            2
          </span>
           
          Variable(n) im Content gefunden
        </div>
        <button
          class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 cursor-pointer"
          data-slot="button"
          data-testid="sync-all-btn"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-refresh-cw mr-2 h-3 w-3"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3 12a9 9 0 0 1 9-9 9.75 9.75 0 0 1 6.74 2.74L21 8"
            />
            <path
              d="M21 3v5h-5"
            />
            <path
              d="M21 12a9 9 0 0 1-9 9 9.75 9.75 0 0 1-6.74-2.74L3 16"
            />
            <path
              d="M8 16H3v5"
            />
          </svg>
          Alle synchronisieren
        </button>
      </div>
      <div
        class="flex flex-wrap gap-2"
      >
        <div
          class="flex items-center gap-2 rounded-md border px-3 py-2 border-green-200 bg-green-50 text-green-900"
          data-testid="detected-variable"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-circle-check h-4 w-4 text-green-600"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <path
              d="m9 12 2 2 4-4"
            />
          </svg>
          <code
            class="font-mono text-sm"
          >
            {{name}}
          </code>
        </div>
        <div
          class="flex items-center gap-2 rounded-md border px-3 py-2 border-orange-200 bg-orange-50 text-orange-900"
          data-testid="detected-variable"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-circle-alert h-4 w-4 text-orange-600"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <line
              x1="12"
              x2="12"
              y1="8"
              y2="12"
            />
            <line
              x1="12"
              x2="12.01"
              y1="16"
              y2="16"
            />
          </svg>
          <code
            class="font-mono text-sm"
          >
            {{age}}
          </code>
          <button
            class="inline-flex items-center justify-center whitespace-nowrap font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:text-accent-foreground dark:hover:bg-accent/50 rounded-md gap-1.5 has-[>svg]:px-2.5 ml-2 h-6 cursor-pointer px-2 text-xs hover:bg-orange-100"
            data-slot="button"
            data-testid="add-btn"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-plus mr-1 h-3 w-3"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5 12h14"
              />
              <path
                d="M12 5v14"
              />
            </svg>
            Hinzufügen
          </button>
        </div>
      </div>
      <div
        class="mt-3 rounded-md bg-orange-100 p-3 text-sm text-orange-800"
        data-testid="undefined-variables"
      >
        <div
          class="flex items-center gap-2"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-circle-alert h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <line
              x1="12"
              x2="12"
              y1="8"
              y2="12"
            />
            <line
              x1="12"
              x2="12.01"
              y1="16"
              y2="16"
            />
          </svg>
          <span>
            1
             Variable(n) noch nicht als Feld definiert
          </span>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`DetectedVariables rendering tests DetectedVariables - detectedVariables - undefined empty - tests 1`] = `
<div>
  <section
    class="space-y-2"
    data-testid="detected-variables"
  >
    <p
      class="text-xs font-medium tracking-wide text-slate-400 uppercase"
    >
      Erkannte Platzhalter
    </p>
    <p
      class="text-sm text-slate-500"
    >
      Platzhalter, die im Prompt-Text gefunden wurden
    </p>
    <div
      class="rounded-lg border border-slate-200 bg-slate-50 p-4"
    >
      <div
        class="mb-3 flex items-center justify-between"
      >
        <div
          class="text-sm text-slate-700"
        >
          <span
            class="font-medium"
          >
            2
          </span>
           
          Variable(n) im Content gefunden
        </div>
      </div>
      <div
        class="flex flex-wrap gap-2"
      >
        <div
          class="flex items-center gap-2 rounded-md border px-3 py-2 border-green-200 bg-green-50 text-green-900"
          data-testid="detected-variable"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-circle-check h-4 w-4 text-green-600"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <path
              d="m9 12 2 2 4-4"
            />
          </svg>
          <code
            class="font-mono text-sm"
          >
            {{name}}
          </code>
        </div>
        <div
          class="flex items-center gap-2 rounded-md border px-3 py-2 border-green-200 bg-green-50 text-green-900"
          data-testid="detected-variable"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-circle-check h-4 w-4 text-green-600"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <path
              d="m9 12 2 2 4-4"
            />
          </svg>
          <code
            class="font-mono text-sm"
          >
            {{email}}
          </code>
        </div>
      </div>
    </div>
  </section>
</div>
`;
